<resources>
    <string name="app_name">SnapGallery</string>
    <string name="obrazy">Obrazy</string>
    <string name="filmy">Filmy</string>
    <string name="albumy">Albumy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="images_fragment">images_fragment</string>
    <string name="moje_albumy">Moje albumy</string>
    <string name="moje_zdj_cia">Moje zdjęcia</string>
    <string name="moje_filmy">Moje filmy</string>
    <string name="video">Video</string>
    <string name="image" />
    <string name="back">back</string>
    <string name="share">share</string>
    <string name="favorite">favorite</string>
    <string name="delete">delete</string>
    <string name="info_linearlayout_relativelayout"><![CDATA[info/> </LinearLayout> </RelativeLayout>]]></string>
    <string name="info">info</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="switch_mode">Switch Mode</string>
    <string name="switch_lens">Switch Lens</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="play_video">play_video</string>
    <string name="media">media</string>
    <string name="no_images">Brak zdjęć</string>
    <string name="no_videos">Brak filmów</string>
</resources>