<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.media3.ui.PlayerView
        android:id="@+id/player_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:keepScreenOn="true"
        app:layout_constraintBottom_toTopOf="@+id/actionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:use_controller="true">

    </androidx.media3.ui.PlayerView>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#000000"
        android:gravity="clip_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="36dp"
            android:layout_marginStart="16dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/back"
            android:src="@drawable/baseline_arrow_back_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#000000"
        android:backgroundTint="#000000"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"> <!-- Equal to the total weight of all children -->

        <ImageView
            android:id="@+id/share_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/share"
            android:src="@drawable/baseline_share_24" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/favorite"
            android:src="@drawable/baseline_favorite_24" />

        <ImageView
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/delete"
            android:src="@drawable/baseline_delete_24" />

        <ImageView
            android:id="@+id/info_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/info"
            android:src="@drawable/baseline_info_24" />
    </LinearLayout>

    <ImageView
        android:id="@+id/prev_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/baseline_arrow_back_ios_24"
    android:contentDescription="@string/previous"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/player_view"
    app:layout_constraintBottom_toBottomOf="@id/player_view"
    android:visibility="invisible"/>

    <!-- Strzałka "Następny" po prawej stronie PlayerView -->
    <ImageView
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/baseline_arrow_forward_ios_24"
    android:contentDescription="@string/next"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@id/player_view"
    app:layout_constraintBottom_toBottomOf="@id/player_view"
    android:visibility="invisible"/>



</androidx.constraintlayout.widget.ConstraintLayout>